plugins {
    id "org.springframework.boot" version "2.5.6"
    id "java"
    id "idea"
    id "com.diffplug.spotless" version "5.17.0"
    id "com.github.ben-manes.versions" version "0.39.0"
    id 'io.spring.dependency-management' version "1.0.11.RELEASE"
}

repositories {
    mavenCentral()
}

ext.javaJwtVersion = "3.18.2"
ext.comonsIoVersion = "2.11.0"
ext.tikaVersion = "2.1.0"
ext.poiVersion = "5.0.0"
ext.sentryVersion = "5.2.4"
ext.gsonVersion = "2.8.8"
ext.mybatisVersion = "2.1.4"
ext.p6spyVersion = "1.7.1"

dependencies {
    implementation "org.springframework.boot:spring-boot-starter-web"
    implementation "org.springframework.boot:spring-boot-starter-aop"
    implementation "org.springframework.boot:spring-boot-starter-security"
    implementation "org.springframework.boot:spring-boot-starter-actuator"
    implementation "org.springframework.boot:spring-boot-configuration-processor"
    implementation "org.projectlombok:lombok"
    implementation "org.apache.commons:commons-lang3"
    implementation "com.h2database:h2"
    implementation 'org.hibernate:hibernate-core:5.6.0.Final'
    implementation 'javax.validation:validation-api'
    implementation "org.mybatis.spring.boot:mybatis-spring-boot-starter:$mybatisVersion"
    implementation "com.github.gavlyukovskiy:p6spy-spring-boot-starter:$p6spyVersion"
    implementation "com.auth0:java-jwt:$javaJwtVersion"
    implementation "com.google.code.gson:gson:$gsonVersion"
    implementation "org.apache.tika:tika-core:$tikaVersion"
    implementation "commons-io:commons-io:$comonsIoVersion"
    implementation "org.apache.poi:poi:$poiVersion"
    implementation "org.apache.poi:poi-ooxml:$poiVersion"
    implementation "io.sentry:sentry-spring-boot-starter:$sentryVersion"
    implementation "io.sentry:sentry-logback:$sentryVersion"
    implementation "org.flywaydb:flyway-core"
    testImplementation "org.mybatis.spring.boot:mybatis-spring-boot-starter-test:$mybatisVersion"
    compileOnly "org.springframework.boot:spring-boot-starter-tomcat"
    annotationProcessor "org.projectlombok:lombok"
    testAnnotationProcessor "org.projectlombok:lombok"
}

java.sourceCompatibility = JavaVersion.VERSION_17

test {
    exclude "**/*"
}

tasks.withType(JavaCompile) {
    options.encoding = "UTF-8"
}

bootJar {
    archiveFileName = 'demo.jar'

    from("vue/dist") {
        into "static"
    }
}

spotless {
    java {
        removeUnusedImports()

        googleJavaFormat("1.10.0")
    }
}
